# NeuroViz

./: README.md  flake.nix  package-lock.json
.github/workflows/: build.yml  desktop.yml  publish.yml  pypi.yml  test.yml  unity.yml
api-spec/: README.md  index.html  main.tsp  package-lock.json  package.json  tsconfig.json  tspconfig.yaml
api-spec/src/: main.ts
desktop/: Cargo.toml  flake.nix  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
desktop/data/experiments/: example-1.json  example-2.json  example-experiment-1.json  example-experiment-2.json
desktop/data/presets/: config-1.json  config-2.json  config-3.json  config-4.json  high-emission.json  metal-looking.json  preset-1.json  preset-2.json  preset-3.json  preset-4.json  smoothish.json  very-hue.json
desktop/data/results/: 2025-04-01_19-48-42-Example 1.json  2025-04-01_19-49-46-Example 2.json  2025-04-01_19-53-25-Example 1.json  2025-04-01_20-06-49-Example 1.json  2025-04-01_20-07-11-Example 2.json  2025-04-01_20-10-55-Example 1.json
desktop/neuroviz/src/: http_server.rs
desktop/python/: Cargo.toml  README.md  pyproject.toml
desktop/python/examples/: notebook.ipynb
desktop/python/src/: lib.rs
desktop/src/: App.css  App.module.css  App.tsx  NavigationProvider.tsx  SliderProviders.tsx  bindings.gen.ts  commands.ts  const.ts  hooks.ts  interfaces.ts  utils.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: appdata.rs  consts.rs  extensions.rs  lib.rs  main.rs  storage.rs  structs.rs
desktop/src-tauri/src/api/: commands.rs  events.rs  file_ops.rs  http_server.rs  mod.rs  storage.rs  tcpservice.rs  utils.rs
desktop/src-tauri/src/data/: experiment.rs  experiment_result.rs  mod.rs  parameters.rs  preset.rs
desktop/src-tauri/src/data/parameters/: mod.rs  parameter_macro.rs
desktop/src-tauri/src/state/: choice_experiment_state.rs  experiment_state.rs  mod.rs  rating_experiment_state.rs
desktop/src-tauri/tests/: data.rs  experiment.rs
desktop/src/components/: Backdrop.tsx  Button.module.css  Button.tsx  Buttons.tsx  ConnectionBox.module.css  ConnectionBox.tsx  ContentBox.module.css  ContentBox.tsx  ExperimentCard.tsx  Input.module.css  Input.tsx  InputField.module.css  InputField.tsx  Layout.module.css  Layout.tsx  ListButton.tsx  ParameterSlider.tsx  ParametersControl.tsx  ParametersPreset.tsx  Popup.module.css  Popup.tsx  QRcode.tsx  Sidebar.module.css  Sidebar.tsx  Slider.tsx  SliderCollection.tsx
desktop/src/pages/: ActiveExperiment.tsx  (+8 more)
desktop/tauri/: package-lock.json  package.json
mobile-old/Assets/: BrainShader.shadergraph  DefaultVolumeProfile.asset  Dragon.mat  Material2.mat  Material4.mat
mobile-old/ProjectSettings/: GraphicsSettings.asset
mobile/Assets/: Brain Material.mat  DefaultVolumeProfile.asset  Material1.mat  Material3.mat  MaterialDuplicator.cs  New Universal Render Pipeline Asset.asset  TCP.cs  Universal Render Pipeline Asset.asset  Universal Render Pipeline Asset_Renderer SeeThrough Disabled.asset  Universal Render Pipeline Asset_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset  packages.config
mobile/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
models/: Brain1.blend  Brain1.blend1
openapi/: package-lock.json  package.json
openapi/public/: neuroviz.yaml
openapi/src/: main.ts
python-api/: Cargo.toml  neuroviz.pyi  test.ipynb  test.py
python-api/src/: lib.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
(+165 files in other folders)
