[package]
name = "python-api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "neuroviz"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["anyhow", "generate-import-lib", "serde"] }
tokio = { version = "1", features = ["full"] }
neuroviz = { path = "../desktop/src-tauri" }
qr2term = "0.3.3"
local-ip-address = "0.6.3"
futures = "0.3.31"
axum = "0.8.3"
serde_json = "1.0.140"
anyhow = "1.0.98"
tokio-util = "0.7.15"
strum = "0.27.1"
