[package]
name = "neuroviz"
default-run = "neuroviz"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neuroviz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
lazy_static = "1"
local-ip-address = "0.6"
dirs = "6.0.0"
axum = "0.8.1"
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"
slug = "0.1"
chrono = { version = "0.4.40", features = ["serde"] }
strum = { version = "0.27.1", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", features = ["chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
async-stream = "0.3.6"
anyhow = "1.0.97"

[dev-dependencies]
eventsource-stream = "0.2.3"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
